--- a/bat/nbs-leg.html
+++ b/bat/nbs-leg.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Search Bus Stop | BAT</title>
+    <title>Nearby Bus Stops | BAT</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
@@ -194,15 +194,8 @@
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="page-title" id="filter-title">All Bus Stops</h1>
+                                    <h1 class="page-title" id="filter-title">Nearby Bus Stops</h1>
                                 </div>
-                                <div style="position: relative; max-width: 400px; margin-top: 5px;">
-                                    <i class="fa-solid fa-search"
-                                        style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #cccccc; z-index: 1;"></i>
-                                    <input type="text" id="bus-stop-search" class="form-control"
-                                        placeholder=" Search for a Bus Stop" style="padding-left: 35px; width: 100%;">
-                                </div>
-
                             </div>
                         </div>
                     </div>
@@ -220,7 +213,7 @@
 
                     <ul>
                         <li>
-                            <a href="nbs.html">Nearby Bus Stops</a>
+                            <a href="nbs.html" class="active">Nearby Bus Stops</a>
                         </li>
 
                         <li>
@@ -228,7 +221,7 @@
                         </li>
 
                         <li>
-                            <a href="abs.html" class="active">Bus Stops</a>
+                            <a href="abs.html">Bus Stops</a>
                         </li>
                     </ul>
 
@@ -246,17 +239,11 @@
         </div>
 
     </section>
-
     <!-- Section Contents -->
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
-        <div class="container">
-            <div class="list-group">
-                <p>Fetching Bus Stops List for the first time...</p>
-            </div>
-            <div class="pagination-buttons" style="text-align: center; margin-top: 20px;">
-                <button id="prev-button" class="btn btn-secondary" disabled>Previous</button>
-                <button id="next-button" class="btn btn-primary">Next</button>
-            </div>
+
+        <div class="container container-xxl">
+            <div id="bus-stops"></div>
         </div>
     </section>
 
@@ -310,135 +297,163 @@
 
     <script src="../js/utils.js"></script>
 
-<script>
-    document.addEventListener('DOMContentLoaded', async () => {
-        const searchInput = document.getElementById('bus-stop-search'); // Search input field
-        const searchBusStopButton = document.getElementById('search-bus-stop-button'); // Search Bus Stop button
+    <script>
+        const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/nearby-bus-stops'; // Update with your server URL
 
-        // Clear the search bar when the "Search Bus Stop" button is clicked
-        searchBusStopButton.addEventListener('click', () => {
-            searchInput.value = ''; // Clear the search input field
+        // Automatically fetch nearby bus stops on page load
+        document.addEventListener('DOMContentLoaded', () => {
+            const busStopsContainer = document.getElementById('bus-stops');
+
+            // Display "Searching for nearby bus stops..." message
+            busStopsContainer.innerHTML = '<p style="text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;"><span class="spinner"></span> Searching for nearby bus stops...</p>';
+
+            // Check if geolocation is available
+            if (!navigator.geolocation) {
+                alert('Geolocation is not supported by your browser.');
+                busStopsContainer.innerHTML = '<p style="text-align:center;">Geolocation is not supported by your browser.</p>';
+                return;
+            }
+
+            // Get the user's current location
+            navigator.geolocation.getCurrentPosition(async (position) => {
+                const latitude = position.coords.latitude;
+                const longitude = position.coords.longitude;
+
+                try {
+                    // Fetch nearby bus stops from the backend
+                    const response = await fetch(`${apiUrl}?latitude=${latitude}&longitude=${longitude}&radius=2`);
+                    if (!response.ok) {
+                        throw new Error('Failed to fetch nearby bus stops');
+                    }
+
+                    const busStops = await response.json();
+                    displayBusStops(busStops);
+                } catch (error) {
+                    console.error('Error:', error);
+                    busStopsContainer.innerHTML = '<p>Failed to fetch nearby bus stops. Please try again later.</p>';
+                    footer.style.display = 'block';
+                }
+            }, (error) => {
+                console.error('Geolocation error:', error);
+                busStopsContainer.innerHTML = '<p>Unable to retrieve your location.</p>';
+            });
         });
 
-        const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-stops'; // API URL
-        const listGroup = document.querySelector('.list-group'); // Select the existing list-group container
-        const prevButton = document.getElementById('prev-button'); // Previous button
-        const nextButton = document.getElementById('next-button'); // Next button
-        const limit = 20; // Number of items per page
-        let allBusStops = []; // Store all fetched bus stops for searching
-        let currentPage = 1; // Current page number
-        let totalPages = 1; // Total number of pages
+        document.addEventListener('DOMContentLoaded', () => {
+            const cachedLocation = sessionStorage.getItem('userLocation');
+            const busStopsContainer = document.getElementById('bus-stops');
 
-        // Function to fetch all bus stops in batches
-        async function fetchAllBusStops() {
-            let allBusStops = [];
-            let skip = 0;
-            const batchSize = 500; // Fetch in batches of 500 (or adjust based on API limits)
+            if (cachedLocation) {
+                const { latitude, longitude } = JSON.parse(cachedLocation);
+                fetchNearbyBusStops(latitude, longitude);
+            } else {
+                // Get the user's current location
+                navigator.geolocation.getCurrentPosition((position) => {
+                    const latitude = position.coords.latitude;
+                    const longitude = position.coords.longitude;
 
-            while (true) {
-                try {
-                    const response = await fetch(`${apiUrl}?$skip=${skip}&$top=${batchSize}`, {
-                        method: 'GET',
-                        headers: {
-                            accept: 'application/json',
-                        },
-                    });
+                    // Cache the location
+                    sessionStorage.setItem('userLocation', JSON.stringify({ latitude, longitude }));
 
-                    if (!response.ok) {
-                        throw new Error('Failed to fetch bus stops');
-                    }
+                    fetchNearbyBusStops(latitude, longitude);
+                }, (error) => {
+                    console.error('Geolocation error:', error);
+                    busStopsContainer.innerHTML = '<p>Unable to retrieve your location.</p>';
+                }, {
+                    enableHighAccuracy: true,
+                    timeout: 10000,
+                    maximumAge: 0
+                });
+            }
+        });
 
-                    const data = await response.json();
-                    allBusStops = allBusStops.concat(data.value);
+        async function fetchNearbyBusStops(latitude, longitude) {
+            try {
+                const response = await fetch(`${apiUrl}?latitude=${latitude}&longitude=${longitude}&radius=2`);
+                if (!response.ok) {
+                    throw new Error('Failed to fetch nearby bus stops');
+                }
 
-                    if (data.value.length < batchSize) {
-                        break; // Exit loop if fewer than `batchSize` items are returned
-                    }
+                const busStops = await response.json();
+                displayBusStops(busStops);
+            } catch (error) {
+                console.error('Error:', error);
+                busStopsContainer.innerHTML = '<p style="text-align:center;">Failed to fetch nearby bus stops. Please try again later.</p>';
+                footer.style.display = 'block';
+            }
+        }
 
-                    skip += batchSize; // Increment skip for the next batch
-                } catch (error) {
-                    console.error('Error fetching bus stops:', error);
-                    break;
+        // Display the 3 nearest bus stops
+        function displayBusStops(busStops) {
+            const busStopsContainer = document.getElementById('bus-stops');
+            const footer = document.querySelector('.footer'); // Select the footer
+            busStopsContainer.innerHTML = ''; // Clear previous results
+
+            if (!busStops || busStops.length === 0) {
+                busStopsContainer.innerHTML = '<p>No bus stops found nearby.</p>';
+                footer.style.display = 'block'; // Show footer even if no bus stops are found
+                return;
+            }
+
+            busStops.forEach((busStop, index) => {
+                const distance = busStop.distance < 1
+                    ? `${(busStop.distance * 1000).toFixed(0)} m` // Convert to meters if less than 1 km
+                    : `${busStop.distance.toFixed(2)} km`; // Show in kilometers otherwise
+
+                const busStopElement = document.createElement('div');
+                busStopElement.className = 'bus-stop';
+                busStopElement.innerHTML = `
+            <p>Bus Stop Code: 
+            <span class="bus-stop-code" data-code="${busStop.BusStopCode}" data-description="${busStop.Description}">
+                ${busStop.BusStopCode}
+            </span></p>
+            <p>Description: <span>${busStop.Description}</span><br></p>
+            <p>Road Name: <span>${busStop.RoadName}</span><br></p>
+            <p>Distance: <span>${distance}</span></p>
+        `;
+                busStopsContainer.appendChild(busStopElement);
+            });
+
+            // Add click event listeners to bus stop codes
+            document.querySelectorAll('.bus-stop-code').forEach((element) => {
+                element.addEventListener('click', (event) => {
+                    const busStopCode = event.target.getAttribute('data-code');
+
+                    // Navigate to bat.html with the BusStopCode as a query parameter
+                    window.location.href = `bat.html?BusStopCode=${encodeURIComponent(busStopCode)}`;
+                });
+            });
+
+            footer.style.display = 'block'; // Show footer after bus stops are loaded
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const searchBusStopButton = document.querySelector('a[href="bat.html"]'); // Select the "Search Bus Stop" button
+            const searchInput = document.getElementById('bus-stop-search'); // Select the search input field
+
+            if (searchBusStopButton && searchInput) {
+                searchBusStopButton.addEventListener('click', () => {
+                    searchInput.value = ''; // Clear the search bar
+                });
+            }
+        });
+
+        // Populate the search bar with the BusStopCode from query parameters
+        document.addEventListener('DOMContentLoaded', () => {
+            const urlParams = new URLSearchParams(window.location.search);
+            const busStopCode = urlParams.get('BusStopCode'); // Get the BusStopCode from the query parameters
+
+            if (busStopCode) {
+                const searchInput = document.getElementById('bus-stop-search'); // Select the search bar
+                if (searchInput) {
+                    searchInput.value = busStopCode; // Populate the search bar with the BusStopCode
                 }
             }
-
-            // Save the fetched bus stops to localStorage
-            localStorage.setItem('allBusStops', JSON.stringify(allBusStops));
-            return allBusStops;
-        }
-
-        // Function to display bus stops for the current page
-        function displayBusStops(busStops, page) {
-            const startIndex = (page - 1) * limit;
-            const endIndex = startIndex + limit;
-            const paginatedBusStops = busStops.slice(startIndex, endIndex);
-
-            // Clear the list group and display the bus stops
-            listGroup.innerHTML = '';
-            paginatedBusStops.forEach((busStop) => {
-                const listItem = document.createElement('a');
-                listItem.href = `bat.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`; // Pass BusStopCode as a query parameter
-                listItem.className = 'list-group-item list-group-item-action bus-stop-code';
-                listItem.setAttribute('data-code', busStop.BusStopCode);
-                listItem.setAttribute('data-description', busStop.Description);
-                listItem.textContent = `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`;
-                listGroup.appendChild(listItem);
-            });
-
-            // Update button states
-            prevButton.disabled = page === 1;
-            nextButton.disabled = page === totalPages;
-        }
-
-        // Function to filter bus stops based on search input
-        function filterBusStops(query) {
-            const filteredBusStops = allBusStops.filter((busStop) => {
-                const busStopCode = busStop.BusStopCode.toLowerCase();
-                const description = busStop.Description.toLowerCase();
-                return busStopCode.includes(query) || description.includes(query);
-            });
-
-            totalPages = Math.ceil(filteredBusStops.length / limit);
-            currentPage = 1; // Reset to the first page
-            displayBusStops(filteredBusStops, currentPage);
-        }
-
-        // Add event listener to the search input
-        searchInput.addEventListener('input', (event) => {
-            const query = event.target.value.toLowerCase(); // Get the search query in lowercase
-            filterBusStops(query); // Filter the bus stops based on the search query
         });
 
-        // Add event listeners to pagination buttons
-        prevButton.addEventListener('click', () => {
-            if (currentPage > 1) {
-                currentPage--;
-                displayBusStops(allBusStops, currentPage);
-            }
-        });
 
-        nextButton.addEventListener('click', () => {
-            if (currentPage < totalPages) {
-                currentPage++;
-                displayBusStops(allBusStops, currentPage);
-            }
-        });
 
-        // Load bus stops from localStorage or fetch from API
-        const cachedBusStops = localStorage.getItem('allBusStops');
-        if (cachedBusStops) {
-            console.log('Loading bus stops from localStorage...');
-            allBusStops = JSON.parse(cachedBusStops);
-        } else {
-            console.log('Fetching all bus stops...');
-            allBusStops = await fetchAllBusStops();
-        }
-
-        totalPages = Math.ceil(allBusStops.length / limit); // Calculate total pages
-        displayBusStops(allBusStops, currentPage); // Display the first page
-    });
-</script>
-
+    </script>
 </body>
 
 </html>
