--- a/bat/nbs-leg.html
+++ b/bat/nbs-leg.html
@@ -34,8 +34,9 @@
 
 <style>
     #cv-bat {
-        background-image: url("../img/bg-img/hero-bg-small.png");
-        height: 34vh;
+        /* background-image: url("../img/bg-img/cover-bat.jpg"); */
+        /* height: 40vh; */
+        height: 10vh;
     }
 
     .footer {
