--- a/index.html
+++ b/index.html
@@ -171,6 +171,18 @@
                     <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="100ms"
                         data-year="2025">
                         <div class="single-portfolio-content">
+                            <img src="https://i.imgur.com/kSHiKjW.png" alt>
+                            <div class="hover-content-blog">
+                                <h4>Bus Arrival Timings</h4>
+                                <a class="info" href="bat/nbs.html" class="portfolio-img"><i
+                                        class="fa-solid fa-arrow-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="100ms"
+                        data-year="2025">
+                        <div class="single-portfolio-content">
                             <img src="https://i.imgur.com/HaCQ71l.png" alt>
                             <div class="hover-content-blog">
                                 <h4>EICW - Implementation Brainstorming</h4>
@@ -188,18 +200,6 @@
                                 <h4>Train Delays Tracker</h4>
                                 <a class="info" href="https://nurafianzulkifli.github.io/train-delays-checker/"
                                     class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="500ms"
-                        data-year="2022">
-                        <div class="single-portfolio-content">
-                            <img src="https://i.imgur.com/JAQpFxJ.png" alt="bus-rep">
-                            <div class="hover-content-blog">
-                                <h4>Bus Replications</h4>
-                                <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
-                                        class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
