--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -276,6 +276,17 @@
 
 
           <div class="row pw-portfolio">
+            <!-- <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2025">
+              <div class="single-portfolio-content">
+                <img src="https://i.imgur.com/kSHiKjW.png" alt>
+                <div class="hover-content-blog align-items-center">
+                  <h4>Bus Arrival Timings</h4>
+                  <a class="info" href="worksbynrfz/bus-arr.html" class="portfolio-img"><i
+                      class="fa-solid fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div> -->
+
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2025">
               <div class="single-portfolio-content">
                 <img src="https://i.imgur.com/HaCQ71l.png" alt>
