--- a/bat/abs.html
+++ b/bat/abs.html
@@ -254,9 +254,9 @@
             <div class="list-group">
                 <p style="text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;"><span class="spinner"></span>Fetching Bus Stops list for the first time...</p>
             </div>
-            <div class="pagination-buttons" style="text-align: center; margin-top: 20px;">
-                <button id="prev-button" class="btn btn-secondary" style="display: none;">Previous</button>
-                <button id="next-button" class="btn btn-primary" style="display: none;">Next</button>
+            <div class="pagination-buttons" style="text-align: center; margin-top: 20px; margin-right: 3em;">
+                <button id="prev-button" class="btn pw-btn-prev btn-2 mt-15" style="display: none;">Previous</button>
+                <button id="next-button" class="btn pw-btn-next btn-2 mt-15" style="display: none;">Next</button>
             </div>
         </div>
     </section>
