--- a/bat/abr.html
+++ b/bat/abr.html
@@ -312,143 +312,81 @@
     <script src="../js/utils.js"></script>
 
     <script>
-        document.addEventListener('DOMContentLoaded', async () => {
-            const searchInput = document.getElementById('bus-stop-search'); // Search input field
-            const searchBusStopButton = document.getElementById('search-bus-stop-button'); // Search Bus Stop button
+    document.addEventListener("DOMContentLoaded", () => {
+        const listGroup = document.querySelector(".list-group");
+        const spinner = document.querySelector(".spinner");
+        const prevButton = document.getElementById("prev-button");
+        const nextButton = document.getElementById("next-button");
 
-            // Clear the search bar when the "Search Bus Stop" button is clicked
-            searchBusStopButton.addEventListener('click', () => {
-                searchInput.value = ''; // Clear the search input field
-            });
+        let currentPage = 1;
+        const itemsPerPage = 10; // Adjust as needed
+        let busStops = [];
 
-            const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-stops'; // API URL
-            const listGroup = document.querySelector('.list-group'); // Select the existing list-group container
-            const prevButton = document.getElementById('prev-button'); // Previous button
-            const nextButton = document.getElementById('next-button'); // Next button
-            const limit = 20; // Number of items per page
-            let allBusStops = []; // Store all fetched bus stops for searching
-            let currentPage = 1; // Current page number
-            let totalPages = 1; // Total number of pages
-
-            // Function to fetch all bus stops in batches
-            async function fetchAllBusStops() {
-                let allBusStops = [];
-                let skip = 0;
-                const batchSize = 500; // Fetch in batches of 500 (or adjust based on API limits)
-
-                while (true) {
-                    try {
-                        const response = await fetch(`${apiUrl}?$skip=${skip}&$top=${batchSize}`, {
-                            method: 'GET',
-                            headers: {
-                                accept: 'application/json',
-                            },
-                        });
-
-                        if (!response.ok) {
-                            throw new Error('Failed to fetch bus stops');
-                        }
-
-                        const data = await response.json();
-                        allBusStops = allBusStops.concat(data.value);
-
-                        if (data.value.length < batchSize) {
-                            break; // Exit loop if fewer than `batchSize` items are returned
-                        }
-
-                        skip += batchSize; // Increment skip for the next batch
-                    } catch (error) {
-                        console.error('Error fetching bus stops:', error);
-                        break;
-                    }
+        // Fetch data from the API
+        async function fetchBusRoutes() {
+            try {
+                const response = await fetch("https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-routes");
+                if (!response.ok) {
+                    throw new Error("Failed to fetch bus routes");
                 }
+                busStops = await response.json();
+                displayBusStops();
+            } catch (error) {
+                console.error("Error fetching bus routes:", error);
+                listGroup.innerHTML = `<p style="color: red; text-align: center;">Failed to fetch bus stops. Please try again later.</p>`;
+            } finally {
+                spinner.style.display = "none";
+            }
+        }
 
-                // Save the fetched bus stops to localStorage
-                localStorage.setItem('allBusStops', JSON.stringify(allBusStops));
-                return allBusStops;
+        // Display bus stops with pagination
+        function displayBusStops() {
+            listGroup.innerHTML = ""; // Clear the list
+            const startIndex = (currentPage - 1) * itemsPerPage;
+            const endIndex = startIndex + itemsPerPage;
+            const currentBusStops = busStops.slice(startIndex, endIndex);
+
+            if (currentBusStops.length === 0) {
+                listGroup.innerHTML = `<p style="text-align: center;">No bus stops available.</p>`;
+                return;
             }
 
-            // Function to display bus stops for the current page
-            function displayBusStops(busStops, page) {
-                const startIndex = (page - 1) * limit;
-                const endIndex = startIndex + limit;
-                const paginatedBusStops = busStops.slice(startIndex, endIndex);
-
-                // Clear the list group and display the bus stops
-                listGroup.innerHTML = '';
-                if (busStops.length === 0) {
-                    listGroup.innerHTML = '<p style="text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;"><span class="spinner"></span> Searching for nearby bus stops...</p>';
-                    prevButton.style.display = 'none'; // Hide buttons if fetching message is shown
-                    nextButton.style.display = 'none';
-                    return;
-                }
-
-                paginatedBusStops.forEach((busStop) => {
-                    const listItem = document.createElement('a');
-                    listItem.href = `bat.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`; // Pass BusStopCode as a query parameter
-                    listItem.className = 'list-group-item list-group-item-action bus-stop-code';
-                    listItem.setAttribute('data-code', busStop.BusStopCode);
-                    listItem.setAttribute('data-description', busStop.Description);
-                    listItem.textContent = `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`;
-                    listGroup.appendChild(listItem);
-                });
-
-                // Check if there are any items to display
-                const hasItems = paginatedBusStops.length > 0;
-
-                // Update button states
-                prevButton.style.display = hasItems && page > 1 ? 'inline-block' : 'none';
-                nextButton.style.display = hasItems && page < totalPages ? 'inline-block' : 'none';
-            }
-
-            // Function to filter bus stops based on search input
-            function filterBusStops(query) {
-                const filteredBusStops = allBusStops.filter((busStop) => {
-                    const busStopCode = busStop.BusStopCode.toLowerCase();
-                    const description = busStop.Description.toLowerCase();
-                    return busStopCode.includes(query) || description.includes(query);
-                });
-
-                totalPages = Math.ceil(filteredBusStops.length / limit);
-                currentPage = 1; // Reset to the first page
-                displayBusStops(filteredBusStops, currentPage);
-            }
-
-            // Add event listener to the search input
-            searchInput.addEventListener('input', (event) => {
-                const query = event.target.value.toLowerCase(); // Get the search query in lowercase
-                filterBusStops(query); // Filter the bus stops based on the search query
+            currentBusStops.forEach((stop) => {
+                const listItem = document.createElement("div");
+                listItem.className = "list-group-item";
+                listItem.innerHTML = `
+                    <h5>${stop.name}</h5>
+                    <p>Code: ${stop.code}</p>
+                    <p>Road: ${stop.road}</p>
+                `;
+                listGroup.appendChild(listItem);
             });
 
-            // Add event listeners to pagination buttons
-            prevButton.addEventListener('click', () => {
-                if (currentPage > 1) {
-                    currentPage--;
-                    displayBusStops(allBusStops, currentPage);
-                }
-            });
+            // Show/Hide pagination buttons
+            prevButton.style.display = currentPage > 1 ? "inline-block" : "none";
+            nextButton.style.display = endIndex < busStops.length ? "inline-block" : "none";
+        }
 
-            nextButton.addEventListener('click', () => {
-                if (currentPage < totalPages) {
-                    currentPage++;
-                    displayBusStops(allBusStops, currentPage);
-                }
-            });
-
-            // Load bus stops from localStorage or fetch from API
-            const cachedBusStops = localStorage.getItem('allBusStops');
-            if (cachedBusStops) {
-                console.log('Loading bus stops from localStorage...');
-                allBusStops = JSON.parse(cachedBusStops);
-            } else {
-                console.log('Fetching all bus stops...');
-                allBusStops = await fetchAllBusStops();
+        // Pagination controls
+        prevButton.addEventListener("click", () => {
+            if (currentPage > 1) {
+                currentPage--;
+                displayBusStops();
             }
-
-            totalPages = Math.ceil(allBusStops.length / limit); // Calculate total pages
-            displayBusStops(allBusStops, currentPage); // Display the first page
         });
-    </script>
+
+        nextButton.addEventListener("click", () => {
+            if (currentPage * itemsPerPage < busStops.length) {
+                currentPage++;
+                displayBusStops();
+            }
+        });
+
+        // Initialize
+        fetchBusRoutes();
+    });
+</script>
+
 
 </body>
 
