--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             <img src="https://i.imgur.com/kSHiKjW.png" alt>
                             <div class="hover-content-blog">
                                 <h4>Bus Arrival Timings</h4>
-                                <a class="info" href="bat/bat.html" class="portfolio-img"><i
+                                <a class="info" href="bat.html" class="portfolio-img"><i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
