--- a/bat.html
+++ b/bat.html
@@ -38,9 +38,9 @@
         height: 40vh;
     }
 
-    footer {
+    /* footer {
         display: none;
-    }
+    } */
 
  
 </style>
@@ -218,6 +218,18 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeIn"
+                        data-wow-delay="700ms">
+                        <div class="single-portfolio-content">
+                            <img src="bat/assets/abr.png" alt="bus-routes">
+                            <div class="hover-content-blog">
+                                <h4>Saved Bus Stops</h4>
+                                <a class="info" href="#" class="portfolio-img"><i
+                                        class="fa-solid fa-arrow-right"></i></a>
+                            </div>
+                        </div>
+                    </div> -->
                 </div>
             </div>
         </div>
