--- a/bat.html
+++ b/bat.html
@@ -189,7 +189,7 @@
                             <img src="bat/assets/nbs.png" alt>
                             <div class="hover-content-blog">
                                 <h4>Nearby Bus Stops</h4>
-                                <a class="info" href="bat/bat.html" class="portfolio-img"><i
+                                <a class="info" href="bat/nbs.html" class="portfolio-img"><i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
