--- a/bat.html
+++ b/bat.html
@@ -12,13 +12,13 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
-    <link rel="icon" href="../img/core-img/favicon.png">
+    <link rel="icon" href="img/core-img/favicon.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/style-breakpoints.css">
-    <link rel="stylesheet" href="../css/dark-mode.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-breakpoints.css">
+    <link rel="stylesheet" href="css/dark-mode.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN76281P3Q"></script>
@@ -34,7 +34,7 @@
 
 <style>
     #cv-bat-main {
-        background-image: url("../img/bg-img/cover-bat.jpg");
+        background-image: url("img/bg-img/cover-bat.jpg");
         height: 40vh;
     }
 
@@ -262,32 +262,30 @@
         </div>
     </footer>
 
-    <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
+    <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom"
         data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <script src="../js/navtabs.js"></script>
+    <script src="js/navtabs.js"></script>
 
     <script src="bat/bat.js"></script>
 
-    <script src="../js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
 
-    <script src="../js/popper.min.js"></script>
+    <script src="js/popper.min.js"></script>
 
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
-    <script src="../js/pw.bundle.js"></script>
+    <script src="js/pw.bundle.js"></script>
+    
+    <script src="js/default-assets/active.js"></script>
 
-    <script src="../js/default-assets/active.js"></script>
+    <script src="js/isotope.pkgd.min.js"></script>
 
-    <script src="../js/isotope.pkgd.min.js"></script>
+    <script src="js/dstabs.js"></script>
 
-
-    <script src="../js/dstabs.js"></script>
-
-    <script src="../js/utils.js"></script>
-
+    <script src="js/utils.js"></script>
 
 </body>
 
