--- a/bat/sbs.html
+++ b/bat/sbs.html
@@ -221,15 +221,15 @@
 
                     <ul>
                         <li>
-                            <a href="bat/nbs.html">Nearby Bus Stops</a>
+                            <a href="nbs.html">Nearby Bus Stops</a>
                         </li>
 
                         <li>
-                            <a href="bat/sbs.html" id="search-bus-stop-button" class="active">Search Bus Stop</a>
+                            <a href="sbs.html" id="search-bus-stop-button" class="active">Search Bus Stop</a>
                         </li>
 
                         <li>
-                            <a href="bat/abs.html">Bus Stops</a>
+                            <a href="abs.html">Bus Stops</a>
                         </li>
                     </ul>
 
