--- a/bat/nbs.html
+++ b/bat/nbs.html
@@ -214,15 +214,15 @@
 
                     <ul>
                         <li>
-                            <a href="bat/nbs.html" class="active">Nearby Bus Stops</a>
+                            <a href="nbs.html" class="active">Nearby Bus Stops</a>
                         </li>
 
                         <li>
-                            <a href="bat/sbs.html" id="search-bus-stop-button">Search Bus Stop</a>
+                            <a href="sbs.html" id="search-bus-stop-button">Search Bus Stop</a>
                         </li>
 
                         <li>
-                            <a href="bat/abs.html">Bus Stops</a>
+                            <a href="abs.html">Bus Stops</a>
                         </li>
                     </ul>
 
