--- a/bat.html
+++ b/bat.html
@@ -51,36 +51,36 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+            <a href="index.html"><img src="img/core-img/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="../index.html" class="nav-link">
+                    <a href="index.html" class="nav-link">
                         <i class="fa-solid fa-house"></i>
                         <span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../about.html" class="nav-link">
+                    <a href="about.html" class="nav-link">
                         <i class="fa-solid fa-circle-user"></i>
                         <span>About</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../works-by-nrfz.html" class="nav-link">
+                    <a href="works-by-nrfz.html" class="nav-link">
                         <i class="fa-solid fa-pen-paintbrush"></i>
                         <span>Works By NRFZ</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../eicw/eicw.html" class="nav-link">
+                    <a href="eicw/eicw.html" class="nav-link">
                         <i class="fa-solid fa-map-location"></i>
                         <span>EICW</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../blog.html" class="nav-link">
+                    <a href="blog.html" class="nav-link">
                         <i class="fa-solid fa-comment"></i>
                         <span>Blog</span>
                     </a>
@@ -128,31 +128,31 @@
 
         <ul class="mobile-menu-nav">
             <li class="mobile-menu-item">
-                <a href="../index.html" class="mobile-menu-link">
+                <a href="index.html" class="mobile-menu-link">
                     <i class="fa-solid fa-regular fa-house"></i>
                     <span>Home</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="../about.html" class="mobile-menu-link">
+                <a href="about.html" class="mobile-menu-link">
                     <i class="fa-solid fa-regular fa-circle-user"></i>
                     <span>About</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="../works-by-nrfz.html" class="mobile-menu-link">
+                <a href="works-by-nrfz.html" class="mobile-menu-link">
                     <i class="fa-solid fa-pen-paintbrush"></i>
                     <span>Works By NRFZ</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="../eicw/eicw.html" class="mobile-menu-link">
+                <a href="eicw/eicw.html" class="mobile-menu-link">
                     <i class="fa-solid fa-map-location"></i>
                     <span>EICW</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="../blog.html" class="mobile-menu-link">
+                <a href="blog.html" class="mobile-menu-link">
                     <i class="fa-solid fa-comment"></i>
                     <span>Blog</span>
                 </a>
